--- a/codeeffects-sample01/codeeffects-sample01.csproj
+++ b/codeeffects-sample01/codeeffects-sample01.csproj
@@ -176,7 +176,8 @@
     </Compile>
     <Compile Include="Models\CreditCard\CreditCard.cs" />
     <Compile Include="Models\Customer.cs" />
-    <Compile Include="Models\Helpers\CreditCardHelper.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Helpers\Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\CreditCard\Address.cs" />
     <Compile Include="Rules\DepositLimits\DepositLimitHelper.cs" />
@@ -208,6 +209,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\rules\helper.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
